src/test/ui/issues/issue-81584.stderr
error[E0515]: cannot return value referencing function parameter `y`
  --> $DIR/issue-81584.rs:5:22
   |
LL |             .map(|y| y.iter().map(|x| x + 1))
   |                      -^^^^^^^^^^^^^^^^^^^^^^
   |                      |
   |                      returns a value referencing data owned by the current function
   |                      `y` is borrowed here
   |
   = help: use `.collect()` to allocate the iterator

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
